# SCPA

./: .gitignore  .~lock.test-metrics.csv#  README.md  analisi.py  analize.py  analyze.py  build.sh  cuda-test.sh  omp-test.sh  test.sh
cuda/: .~lock.test-metrics.csv#  CMakeLists.txt  Makefile  clean.sh  configure.sh  main.cu
cuda/lib/: CMakeLists.txt  Makefile  preprocessing.c  utils.c  utils.h
homework/definite-integral/: mpi_definite_integral  mpi_definite_integral.c  serial  serial.c
homework/mul-mat-vector/: matrix.txt  mpi_mul_mat_vector  mpi_mul_mat_vector.c  vector.txt
openmp/: Makefile  calc.c  main  main.c
openmp/lib/: preprocessing.c  utils.c  utils.h
project/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  clean.sh  cmake_install.cmake  kernel-CSR.c  kernel-ELLPACK.c  omp-CSR.c  omp-ELLPACK.c  relazioneSCPA.odt  serial-CSR.c  test-metrics.csv  test.sh  utils.c  utils.h  vector_generator.sh
project/cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  calc.cu  clean.sh  cmake_install.cmake  configure.sh  cuda-CSR  cuda-CSR.cu  cuda-ELLPACK  cuda-ELLPACK.cu  main.c  main.cu  mmio.h  utils.c  utils.h
project/cuda/lib/: CMakeLists.txt  Makefile  clean.sh  utils.c  utils.h
project/cuda/libraries/: CMakeLists.txt  clean.sh  utils.c  utils.h
project/openmp/: Makefile  calc.c  main  main.c  omp-CSR  omp-CSR.c  omp-ELLPACK.c  serial-CSR.c  utils.c  utils.h
project/openmp/lib/: utils.h
project/workspace/: calc.c  main.c  mmio.c  mmio.h  omp-metrics.csv  test.sh  utils.h
templateTex/: Sample.aux  Sample.tex
